crates/bevy_ecs_compile_fail_tests/tests/ui/data_in_filter_position.stderr
error[E0277]: the trait bound `bevy_ecs::entity::Entity: WorldQueryFilter` is not satisfied
   --> tests/ui/data_in_filter_position.rs:3:22
    |
3   | fn system(mut query: Query<Entity, Entity>) {
    |                      ^^^^^^^^^^^^^^^^^^^^^ the trait `WorldQueryFilter` is not implemented for `bevy_ecs::entity::Entity`
    |
    = help: the following other types implement trait `WorldQueryFilter`:
              ()
              (F0, F1)
              (F0, F1, F2)
              (F0, F1, F2, F3)
              (F0, F1, F2, F3, F4)
              (F0, F1, F2, F3, F4, F5)
              (F0, F1, F2, F3, F4, F5, F6)
              (F0, F1, F2, F3, F4, F5, F6, F7)
            and $N others
note: required by a bound in `bevy_ecs::system::Query`
   --> C:/Source/rust/bevy/crates/bevy_ecs/src/system/query.rs:281:56
    |
281 | pub struct Query<'world, 'state, Q: WorldQueryData, F: WorldQueryFilter = ()> {
    |                                                        ^^^^^^^^^^^^^^^^ required by this bound in `Query`
