crates/bevy_ecs_compile_fail_tests/tests/ui/data_in_filter_position.rs
use bevy_ecs::prelude::*;

fn system(mut query: Query<Entity, Entity>) {
    
}

fn main() {}